--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -30,31 +30,30 @@
             <h1>Temple Inn<br> & <br>Suites</h1>
         </div>
 
-        <div>
-            <nav class="nav">
-                <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
-                <ul id="primaryNav">
-                    <li>
-                        <a class="active" href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a class="active" href="#">Temple</a>
-                    </li>
-                    <li>
-                        <a class="active" href="#">Reservation</a>
-                    </li>
-                    <li>
-                        <a class="active" href="#">Services</a>
-                    </li>
-                    <li>
-                        <a class="active" href="#">Reception</a>
-                    </li>
-                    <li>
-                        <a class="active" href="#">Full-Time Temple Missionary</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+
+        <nav class="nav">
+            <button id="hamburgerBtn"><span>&#9776;</span><span>&#9776;</span></button>
+            <ul id="primaryNav">
+                <li>
+                    <a class="active" href="index.html">Home</a>
+                </li>
+                <li>
+                    <a class="active" href="#">Temple</a>
+                </li>
+                <li>
+                    <a class="active" href="#">Reservation</a>
+                </li>
+                <li>
+                    <a class="active" href="#">Services</a>
+                </li>
+                <li>
+                    <a class="active" href="#">Reception</a>
+                </li>
+                <li>
+                    <a class="active" href="#">Full-Time Temple Missionary</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -84,39 +83,39 @@
 
                     <h1>Weather</h1>
                     <div id="weather-box1">
-                        <h3 id="today"></h3>
+                        <h3><span id="today"></span></h3>
                         <p>The current temperature in West Valley City, Utah is: <br><span id="current-temp"></span> &deg;F</p>
                         <p>The current Humidity in West Valley City, Utah is: <br><span id="humidity"></span></p>
                         <p>The current Windspeed in West Valley City, Utah is: <br><span id="windspeed"></span></p>
                         <p>The current windchill in West Valley City, Utah is: <br><span id="windchill"></span></p>
                         <h2>Current Weather Condition</h2>
                         <figure>
-                            <img src="" alt="" id="weatherIcon" />
-                            <figcaption></figcaption>
+                            <img src="" alt="" id="weatherIcon1" />
+                            <figcaption id="captionDesc1"></figcaption>
                         </figure>
                     </div>
                     <div id="weather-box2">
-                        <h3>Tomorrow</h3>
+                        <h3><span id="tomorrow"></span></h3>
                         <p>The current temperature in West Valley City, Utah is: <br><span id="current-temp"></span> &deg;F</p>
                         <p>The current Humidity in West Valley City, Utah is: <br><span id="humidity"></span></p>
                         <p>The current Windspeed in West Valley City, Utah is: <br><span id="windspeed"></span></p>
                         <p>The current windchill in West Valley City, Utah is: <br><span id="windchill"></span></p>
                         <h2>Current Weather Condition</h2>
                         <figure>
-                            <img src="" alt="" id="weatherIcon" />
-                            <figcaption></figcaption>
+                            <img src="" alt="" id="weatherIcon2" />
+                            <figcaption id="captiondesc2"></figcaption>
                         </figure>
                     </div>
                     <div id="weather-box3">
-                        <h3>The Day After</h3>
+                        <h3><span id="dayafter"></span></h3>
                         <p>The current temperature in West Valley City, Utah is: <br><span id="current-temp"></span> &deg;F</p>
                         <p>The current Humidity in West Valley City, Utah is: <br><span id="humidity"></span></p>
                         <p>The current Windspeed in West Valley City, Utah is: <br><span id="windspeed"></span></p>
                         <p>The current windchill in West Valley City, Utah is: <br><span id="windchill"></span></p>
                         <h2>Current Weather Condition</h2>
                         <figure>
-                            <img src="" alt="" id="weatherIcon" />
-                            <figcaption></figcaption>
+                            <img src="" alt="" id="weatherIcon3" />
+                            <figcaption id="captiondesc23"></figcaption>
                         </figure>
 
                     </div>
